Use Quarkus cache for TokenCache and integrate cached user lookup; fix process handling\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>